feat: 完成頁面切版，加入React-Router-dom, 創建頁面

--- a/src/Components/ParkingItem/_parkingItem.scss
+++ b/src/Components/ParkingItem/_parkingItem.scss
@@ -3,22 +3,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  // background-color: var(--white);
   &:hover{
     background-color: var(--grey-50);
   }
 
   .parking-info {
-    .address {
-      padding-bottom: 0.2em;
-      .parking-detail{
-        @include svg-adjust(auto, 16px, var(--black-80));
-        &:hover{
-          @include svg-adjust(auto, 16px, var(--black-100));
-        }
-      }
-    }
+    line-height: 1;
+    text-align: start;
 
     .space {
       margin-left: 1.2rem;
@@ -49,6 +40,12 @@
     }
   }
   .parking-link {
+    display: flex;
+    align-items: center;
+    .info {
+        @include svg-adjust(auto, 30px, var(--blue-400));
+        margin-right: 1em;
+      }
     .location {
       @include svg-adjust(auto, 20px, var(--blue-400))
     }
