--- a/src/Styles/_colorSettings.scss
+++ b/src/Styles/_colorSettings.scss
@@ -1,11 +1,15 @@
 :root {
   --white: #ffffff;
+  --yellow-50:#FFF7E1;
+  --red-50: #FBE9E9;
   --green-250: #94D2A7;
   --green-300: #81C995;
   --blue-400: #669ef7;
+  --blue-800:#195ABC;
   --grey-50: #F6F7F9;
   --grey-100: #f1f3f4;
   --grey-200: #e9eaee;
+  --natural-300:#B4CFBD;
 
 
   --black-80: rgb(34, 34, 34, 0.8);
