--- a/src/Components/Map/_map.scss
+++ b/src/Components/Map/_map.scss
@@ -1,11 +1,60 @@
-.map-bg{
+.map-bg[data-mode="mobile"]{
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  // padding-top: 2.5em;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
 
   position: relative;
+  .parking-lot-info{
+    background-color: var(--white);
+    min-height: 100vh;
+  }
+}
+
+.map-bg[data-mode="desktop"] {
+  display: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .map-bg[data-mode="mobile"] {
+    display: none;
+  }
+
+  .map-bg[data-mode="desktop"] {
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+
+    // position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 6fr);
+    .side-menu {
+      padding-top: 2em;
+      background-color: var(--white);
+    }
+    .side-page {
+      // padding-top: 2em;
+      background-color: var(--white);
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+
+
+  .map-bg[data-mode="desktop"] {
+    display: grid;
+    grid-template-columns: 5fr 7fr;
+
+  }
 }
