--- a/src/Components/ParkingList/_parkingList.scss
+++ b/src/Components/ParkingList/_parkingList.scss
@@ -1,11 +1,17 @@
-.parking{
+.parking[data-mode="mobile"]{
   background-color: var(--white);
   border-radius: 10px 10px 0 0;
 
-  position: fixed;
+  position: absolute;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+
+
+  // position: fixed;
+  // left: 0;
+  // right: 0;
+  // bottom: 0;
   &:last-child{
     text-align: right;
   }
@@ -22,7 +28,32 @@
   }
   .parking-list{
     width: 100%;
-    height: 40vh;
+    height: 45vh;
     overflow-y: auto;
+  }
+}
+
+.parking[data-mode="desktop"] {
+  display: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .parking[data-mode="mobile"] {
+    display: none;
+  }
+
+  .parking[data-mode="desktop"] {
+    display: block;
+    // background-color: var(--white);
+    margin-top: 2em;
+    .close-btn {
+      display: none;
+    }
+    .parking-list {
+      width: 100%;
+      height: 80vh;
+      overflow-y: auto;
+    }
   }
 }
