--- a/src/Styles/_reusable.scss
+++ b/src/Styles/_reusable.scss
@@ -3,7 +3,7 @@
 }
 
 .btn {
-  @include size-adjust(60px, 60px);
+  @include size-adjust(40px, 40px);
   // border: 1px solid black;
   border-radius: 50px;
   // font-size: 20px;
@@ -11,6 +11,9 @@
   background-color: var(--grey-100);
   /* shadow */
   box-shadow: var(--box-shadow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     background-color: var(--grey-200);
@@ -27,13 +30,22 @@
   margin-bottom: 0.5em;
   color: var(--black-100);
 }
+.sub-title {
+  @include font-adjust(18px, 700);
+  margin-bottom: 0.5em;
+}
 
 @media screen and (min-width: 768px) {
-  // .btn {
-  //   font-size: 24px;
-  // }
-
   .title {
     font-size: 24px;
+  }
+  .sub-title {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .btn {
+    @include size-adjust(60px, 60px);
   }
 }
