--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -7,6 +7,7 @@
 @import '../Components/ParkingList/parkingList';
 @import '../Components/ParkingItem/parkingItem';
 @import '../Components/Search/searchbar';
+@import '../Components/ParkingLotInfo/parkinglotinfo';
 
 
 // @media screen and (min-width: 768px) {
