--- a/src/Components/ParkingList/_parkingList.scss
+++ b/src/Components/ParkingList/_parkingList.scss
@@ -1,36 +1,51 @@
 .parking[data-mode="mobile"]{
-  background-color: var(--white);
-  border-radius: 10px 10px 0 0;
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-
-  // position: fixed;
-  // left: 0;
-  // right: 0;
-  // bottom: 0;
-  &:last-child{
-    text-align: right;
+  width: 100%;
+  height: 40vh;
+  margin-top: 5.5em;
+  &:first-child{
+    text-align: end;
   }
   .close-btn{
     @include svg-adjust(auto, 18px, var(--black-80));
-    padding: 1.2em 2em 1.6em;
-    // display: flex;
-    // align-items: center;
-    // justify-content: right;
-
-    &:hover{
-      @include svg-adjust(auto, 18px, var(--black-100));
-    }
+    padding: 1.2em 2em 0.8em;
   }
   .parking-list{
     width: 100%;
-    height: 45vh;
+    height: 35vh;
     overflow-y: auto;
   }
+  // background-color: var(--white);
+  // border-radius: 10px 10px 0 0;
+
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+
+
+  // // position: fixed;
+  // // left: 0;
+  // // right: 0;
+  // // bottom: 0;
+  // &:last-child{
+  //   text-align: right;
+  // }
+  // .close-btn{
+  //   @include svg-adjust(auto, 18px, var(--black-80));
+  //   padding: 1.2em 2em 1.6em;
+  //   // display: flex;
+  //   // align-items: center;
+  //   // justify-content: right;
+
+  //   &:hover{
+  //     @include svg-adjust(auto, 18px, var(--black-100));
+  //   }
+  // }
+  // .parking-list{
+  //   width: 100%;
+  //   height: 45vh;
+  //   overflow-y: auto;
+  // }
 }
 
 .parking[data-mode="desktop"] {
