--- a/src/Styles/_colorSettings.scss
+++ b/src/Styles/_colorSettings.scss
@@ -11,7 +11,7 @@
   --grey-200: #e9eaee;
   --natural-300:#B4CFBD;
 
-
+  --black-60: rgb(34, 34, 34, 0.6);
   --black-80: rgb(34, 34, 34, 0.8);
   --black-100: rgb(34, 34, 34);
   --box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
