--- a/src/Styles/_reset.scss
+++ b/src/Styles/_reset.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
-  line-height: 15px;
+  line-height: 1.5;
 }
 
 * {
@@ -94,6 +94,7 @@ body {
     background: var(--green-300);
   }
 }
+
 
 @media screen and (min-width: 768px) {
   body {
