--- a/src/Components/Map/_map.scss
+++ b/src/Components/Map/_map.scss
@@ -23,26 +23,9 @@
   .map-container{
     grid-row: 1/2;
     height: 60vh;
+    // z-index: 100;
   }
 }
-
-// .map-bg[data-mode="mobile"]{
-//   width: 100%;
-//   height: 100%;
-//   min-height: 100vh;
-//   // padding-top: 2.5em;
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: cover;
-
-
-//   position: relative;
-//   .parking-lot-info{
-//     background-color: var(--white);
-//     min-height: 100vh;
-//   }
-// }
-
 
 
 
