feat: Change SCSS to Style-component, not delete yet. Will leave reset, main, colorSetting file others will delete later. Add ParkingLotInfoPage, be like popup page, will add Chargin Station number later. Add Eslint into file, using standard

--- a/src/Components/Map/_map.scss
+++ b/src/Components/Map/_map.scss
@@ -8,13 +8,7 @@
   grid-template-rows: 60vh 40vh;
 
   .side-menu{
-    .search{
-      z-index: 1;
-      position: fixed;
-      top: 15px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+    position: relative;
   }
   .map-container{
     grid-row: 1/2;
