--- a/src/Styles/_colorSettings.scss
+++ b/src/Styles/_colorSettings.scss
@@ -1,6 +1,7 @@
 :root {
   --white: #ffffff;
   --yellow-50:#FFF7E1;
+  --yellow: #FCE292;
   --red-50: #FBE9E9;
   --green-250: #94D2A7;
   --green-300: #81C995;
